# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2016-04-01 mmichaud <m.michael.michaud@orange.fr>
  * Upgrade cts plugin to 1.4.0 (add finnish projections, fix bugs)

2016-03-28 ede
  * upgraded junit & imageio-ext to latest stable versions

2016-03-26 mmichaud <m.michael.michaud@orange.fr>
  * Update JDOM dependency to JDOM2 (used in java2xml)

2016-03-26 Giuseppe Aruta  <giuseppe_aruta@yahoo.it>
  * Extended Sextante Raster Capabilities to read Bitmap (BMP) and JP2000 
   (JP2) raster files

2016-03-24 mmichaud <m.michael.michaud@orange.fr>
  * add build-helper-maven-plugin in maven to be able to run tests located
    in jumptest package

2016-03-23 Giuseppe Aruta  <giuseppe_aruta@yahoo.it>
  * emhenced version of RasterImageLayerPropertiesPlugIn: 
    1) New info HTML table "a la" GvSIG style
    2) Faster info checker (all cell statistic related to Sextante raster 
       image have been removed as alredy embedded into Raster Statistic 
       plugin
    3) Added a limited projection checker < see other details into 
    org.openjump.core.ui.util.ProjUtils.class
    4) Added a Raster Transparency panel

2016-03-15 mmichaud <m.michael.michaud@orange.fr>
  * Switch compiler source and target to java 1.7
  * Adopt java 5 style for feature package (generics, foreach loops)

2016-03-14 mmichaud <m.michael.michaud@orange.fr>
  * Improve RemoveSpike plugin an move RemoveSpike and MakeValid plugins
    to Tools > QA submenu


* release 1.9.1  ****************************************************************

2016-03-12 mmichaud <m.michael.michaud@orange.fr>
  * Deactivate RemoveSpike plugin for 1.9.1 release

2016-03-10 mmichaud <m.michael.michaud@orange.fr>
  * Add a plugin to remove spikes from polygonal geometries

2016-03-08 mmichaud <m.michael.michaud@orange.fr>